# lectorius

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: app.css  (+2 more)
docs/: api-spec.md  architecture.md  data-model.md  frontend-design-spec.md  llm-prompts.md  pipeline.md  playback-state-machine.md  prd.md
pipeline/: README.md  pyproject.toml
pipeline/src/lectorius_pipeline/: __init__.py  cli.py  config.py  errors.py  schemas.py
pipeline/src/lectorius_pipeline/stages/chapterize/: __init__.py  detector.py  runner.py
pipeline/src/lectorius_pipeline/stages/chunkify/: __init__.py  runner.py  splitter.py
pipeline/src/lectorius_pipeline/stages/fallbacks/: __init__.py  runner.py
pipeline/src/lectorius_pipeline/stages/ingest/: __init__.py  llm_assist.py  normalizer.py  parser.py  runner.py
pipeline/src/lectorius_pipeline/stages/memory/: __init__.py  prompts.py  runner.py
pipeline/src/lectorius_pipeline/stages/rag/: __init__.py  embedder.py  runner.py
pipeline/src/lectorius_pipeline/stages/tts/: __init__.py  progress.py  runner.py
pipeline/src/lectorius_pipeline/stages/tts/providers/: __init__.py  base.py  elevenlabs.py  openai_tts.py
pipeline/src/lectorius_pipeline/stages/validate/: __init__.py  checks.py  runner.py
pipeline/src/lectorius_pipeline/utils/: io.py
scripts/: generate-fallbacks.js  generate-fallbacks.mjs
source/: a-christmas-carol.epub  metamorphosis.epub  rip-van-winkle.epub  the-great-gatsby.epub  the-yellow-wallpaper.epub
(+148 files in other folders)
